force-app/main/default/objects/IF_SystemInfo__mdt/IF_SystemInfo__mdt.object-meta.xml
<CustomObject>
    <description>인터페이스 시스템 정보</description>
    <label>IF SystemInfo</label>
    <pluralLabel>IF SystemInfo</pluralLabel>
</CustomObject>