force-app/main/default/objects/IF_SystemInfo__mdt/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>GrantType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>