force-app/main/default/objects/IF_SystemInfo__mdt/fields/IfSystem__c.field-meta.xml
<CustomField>
    <fullName>IfSystem__c</fullName>
    <description>인터페이스 시스템</description>
    <label>IfSystem</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>