force-app/main/default/objects/IF_SystemInfo__mdt/fields/IfUrl__c.field-meta.xml
<CustomField>
    <fullName>IfUrl__c</fullName>
    <description>인터페이스 시스템의 접근 URL</description>
    <label>IfUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>