force-app/main/default/objects/IF_SystemInfo__mdt/fields/RemoteSite__c.field-meta.xml
<CustomField>
    <fullName>RemoteSite__c</fullName>
    <label>Remote Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POC</fullName>
                <default>true</default>
                <label>POC</label>
            </value>
            <value>
                <fullName>QAS</fullName>
            </value>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>PRD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>