force-app/main/default/objects/IF_SystemInfo__mdt/fields/SecretToken__c.field-meta.xml
<CustomField>
    <fullName>SecretToken__c</fullName>
    <label>SecretToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>