force-app/main/default/objects/IF_SystemInfo__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>UserName or ID</description>
    <label>UserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>